# pubg-point-rankings

./: .gitignore  AGENTS.md  LICENSE  README.md  electron-builder.config.js  index.js  package-lock.json  package.json  tsconfig.json
.github/: AGENTS.md
.github/workflows/: release.yml
.sisyphus/plans/: game-process-state-module.md  ordered-sync-polling-ui.md
build-resources/: README.md  entitlements.mac.plist
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: AGENTS.md  app_state.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: accounts.rs  app.rs  logs.rs  matches.rs  mod.rs  notifications.rs  points.rs  rules.rs  settings.rs  sync.rs  teammates.rs
src-tauri/src/db/: connection.rs  migrations.rs  schema.rs
src-tauri/src/dto/: sync_status.rs
src-tauri/src/engine/: calculator.rs
src-tauri/src/parser/: telemetry.rs
src-tauri/src/platform/: process.rs
src-tauri/src/pubg/: client.rs
src-tauri/src/repository/: accounts.rs  matches.rs  mod.rs  notification_tasks.rs  point_match_meta.rs  points.rs  rules.rs  settings.rs  teammates.rs
src-tauri/src/runtime/: game_state.rs  mod.rs  scheduler.rs
src-tauri/src/services/: logs.rs  mod.rs  napcat_runtime.rs  notifications.rs  polling.rs  sync.rs
