[package]
name = "pubg-point-rankings-tauri"
version = "0.1.2"
description = "PUBG Point Rankings Tauri host"
authors = ["lzx"]
edition = "2021"

[lib]
name = "pubg_point_rankings_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
ureq = { version = "2", features = ["json"] }
urlencoding = "2"
chrono = { version = "0.4", default-features = true }
zip = { version = "2", default-features = false, features = ["deflate"] }
